# hardwax-spotify

./: .gitignore  README.md  pyproject.toml  runScrapy.bat  run_databaseOperations.py  run_requests.py
config/: config.py  refresh_token.py
databaseOperations/: data_scraper.py  json_to_db.py  updated_merged_database_operations.py
hardwax/: scrapy.cfg
hardwax/hardwax/: items.py  middlewares.py  pipelines.py  run_all_spiders.py  run_spiders.py  run_weekly_spiders.py  settings.py
hardwax/hardwax/spiders/: ambient.py  back_in_stock.py  basic_channel.py  chicago_oldschool.py  collectors_items.py  colundi_everyone.py  detroit.py  detroit_house.py  digital.py  disco.py  drexciya.py  drum_n_bass.py  electro.py  mego.py  (+18 more)
requests/: Drum_and_bass_request.py  ambient_request.py  basic-channel_request.py  chigaco_request.py  collectors_request.py  colundi_request.py  detroit_house_request.py  detroit_request.py  digital_request.py  disco_request.py  drexciya_request.py  electro_request.py  electronica_request.py  essentials_request.py  exclusives_request.py  grime_request.py  honestjons_request.py  house_request.py  irdial_discs_request.py  last_week_request.py  mego_request.py  new_global_styles_request.py  outernational_request.py  reggae_request.py  reissues_request.py  surgeon_request.py  techno_request.py  this_week_request.py  wave_request.py
spotify/: SpotifyClass_file.py  add_to_playlists.py  album_results.json  api.py  check_playlist_len.py  make_playlist.py  make_playlist_tables.py  playlist.py  reset_not_found_albums.py  search_albums.py  search_songs.py  test.py
